# ReDiP

navigation/: CMakeLists.txt  README.md  package.xml  setup.py
navigation/launch/: bringup_semantic_map_test.launch.py  bringup_semantic_map_test_crowd.launch.py  bringup_semantic_map_test_just_forward.launch.py  bringup_semantic_map_test_just_forward_with_static.launch.py  bringup_semantic_map_test_u_shape.launch.py  bringup_semantic_map_train_data.launch.py  bringup_semantic_navigation.launch.py  bringup_swerve_localization.launch.py  nav2_gazebo.launch.py  swerve_localization.launch.py
navigation/map/10m_train/: map.pgm  (+1 more)
navigation/param/: disc.txt  swerve_robot.yaml  swerve_robot_for_nav copy 2.yaml  swerve_robot_for_nav copy.yaml  swerve_robot_for_nav.yaml  swerve_robot_ibc copy.yaml  swerve_robot_ibc.yaml
navigation/rviz/: dynamic_tracking.rviz  nav2.rviz  semantic_nav2.rviz  test_diffusion.rviz
redip/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
redip/launch/: detect_dynamic_obs.launch.py  detect_dynamic_obs_3d.launch.py  semantic_mapping.launch.py  semantic_navigation.launch.py  test_crowd.launch.py  test_crowd_only_drl.launch.py  test_dynamic_obs_avoidance.launch.py  test_dynamic_obs_avoidance_with_inference_server.py  test_just_forward.launch.py  test_just_forward_with_static.launch.py  test_ushape.launch.py  train_semantic_map_data.launch.py  yolo_segmentation_lidar_projection.launch.py
redip/swerve_drive_semantic_mapping/: get_camera_cali_param.ipynb  global_planner.py  test_dynamic_obs_avoidance.py  test_dynamic_obs_avoidance_dgmon.py  test_dynamic_obs_avoidance_diffusion policy.py  test_dynamic_obs_avoidance_no_astar.py  test_dynamic_obs_avoidance_no_astar_no_dynamic_obs _no_local_goal.py  test_dynamic_obs_avoidance_no_astar_no_dynamic_obs.py  test_dynamic_obs_avoidance_no_dynamic_obs.py  test_dynamic_obs_avoidance_use_map.py  test_dynamic_obs_avoidance_with_inference_server.py  test_only_nav2.py  yolo_segmentation_lidar_projection.py
(+17 files in other folders)
